[package]
name = "tiny-game-loop"
version = "0.1.0"
description = ""
authors = ["Solar-Falcon"]
edition = "2021"
repository = "https://github.com/Solar-Falcon/tiny-game-loop"
license = "Zlib"
readme = "README.md"
categories = ["no-std", "no-std::no-alloc"]
keywords = ["game", "loop"]

[dependencies]
