[package]
name = "tiny-game-loop"
version = "0.1.0"
description = "Basis for a framerate-independent game loop. Only calculations, so you could arrange the loop itself however you want."
authors = ["Solar-Falcon"]
edition = "2021"
repository = "https://github.com/Solar-Falcon/tiny-game-loop"
license = "Zlib"
readme = "README.md"
categories = ["no-std", "no-std::no-alloc"]
keywords = ["game", "loop"]

[dependencies]
